syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.zero.grpc.api";
option java_outer_classname = "HelloWorldProto";

// 服务定义
service MyService {
    // 请求方法定义
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
}

// 请求对象定义
message HelloRequest {
    string name = 1;
}

// 响应对象定义
message HelloReply {
    string message = 1;
}